--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "Toggle web custom font",
-    "version": "1.2",
+    "version": "1.3",
     "description": "A toolbar button to toggle disabling web custom font (browser.display.use_document_fonts). Disabling it resists font fingerprint.",
     "homepage_url": "https://garywill.github.io",
     "icons": {
@@ -22,6 +22,11 @@
     "browser_action": {
         "default_icon": "icon_btn.svg",
         "default_title": "Resist font fingerprint by disabling web custom font"
+    },
+    "commands": {
+        "_execute_browser_action": {
+            "description": "Click toolbar button"
+        }
     },
     "browser_specific_settings": {
         "gecko": {
